--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ a {
   font-size: clamp(2rem, 6vw, 5rem);
   font-weight: 400;
   margin-bottom: 0.5rem;
+  color: #044;
 }
 
 .hero-subheading h2 {
@@ -282,6 +283,7 @@ a {
   }
 }
 
+
 /* ========================
    Footer
    ======================== */
@@ -294,4 +296,9 @@ a {
   margin-top: 3rem;
   font-family: "Lora", serif;
   border-top: 1px solid #ddd;
+}
+
+.map {
+  text-align: center;
+  padding-top: 3em;
 }
