--- a/style.css
+++ b/style.css
@@ -158,6 +158,18 @@ a {
   to   { opacity: 1; transform: translateY(0); }
 }
 
+h3 {
+  padding-top: 1em;
+  text-align: center;
+  font-size: 3em;
+}
+
+.new-offer {
+  padding-top: 1em;
+  text-align: center;
+  font-size: 1.5em;
+}
+
 /* ========================
    Intro & Content
    ======================== */
@@ -168,7 +180,7 @@ a {
 }
 
 .intro p {
-  padding-top: 6.4rem;
+  padding-top: 2.4rem;
   max-width: 700px;
   text-align: center;
   word-break: normal;
